# evoclaw

./: .env.example  .env.minimal  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  ISSUES.md  Makefile  PULL_REQUEST_TEMPLATE.md  QUICK_START.md  README.md  README_en.md  README_zh.md  RELEASE.md  TROUBLESHOOTING.md  bot-access-test.md  ecosystem.config.example.js  pyproject.toml  run.py  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
container/: .dockerignore  Dockerfile  build.sh
docs/: ANALYSIS_REPORT_2026.md  APPLE-CONTAINER-NETWORKING.md  ARCHITECTURE.md  CHANGELOG.md  DEBUG_CHECKLIST.md  DEVELOPMENT_WORKFLOW.md  EXECUTION_PLAN.md  FLUIDITY_AND_DAYTONA_PLAN.md  PRODUCT_STRATEGY.md  README.md  REQUIREMENTS.md  SDK_DEEP_DIVE.md  SECURITY.md  SELF_UPDATE.md  SKILLS_ARCHITECTURE.md  SPEC.md  STABILITY_ANALYSIS.md  nanoclaw-architecture-final.md  nanorepo-architecture.md  test-scenarios.md
host/: __init__.py  allowlist.py  auto_update.py  config.py  container_runner.py  dashboard.py  dashboard_charts.py  db.py  db_adapter.py  dev_engine.py  env.py  group_folder.py  group_queue.py  health_monitor.py  hooks_engine.py  ipc_watcher.py  leader_election.py  log_buffer.py  log_formatter.py  main.py  mcp_server.py  requirements.txt  router.py  sdk_api.py  self_update_ai_fix.py  skill_loader.py  task_scheduler.py  webportal.py  ws_bridge.py
launchd/: com.nanoclaw.plist
repo-tokens/: README.md  action.yml
scripts/: add_indexes_migration.py  build_container.py  evoclaw.service  install_launchd.sh  list_groups.py  list_tasks.py  register_group.py  run_migrations.py  scrub_memory_xml.py  validate_env.py
setup/: check_environment.py  register_group.py  setup.py
skills/: README.md  add-discord.md  add-gmail.md  add-image-vision.md  add-slack.md  add-telegram.md  add-whatsapp.md  setup.md
skills_engine/: __init__.py  __main__.py  apply.py  backup.py  constants.py  customize.py  file_ops.py  init.py  lock.py  manifest.py  merge.py  migrate.py  path_remap.py  rebase.py  replay.py  state.py  structured.py  types.py  uninstall.py
tests/: __init__.py  conftest.py  test_agent_input_validation.py  test_allowlist.py  test_async_executor_calls.py  test_channel_message_splitting.py  test_channel_token_revocation.py  test_claude_parsing.py  test_core.py  test_crossbot_discovery.py  test_dashboard_qs_parser.py  test_db_adapter.py  test_db_safety.py  test_dev_engine.py  test_evolution_safety.py  test_exponential_backoff.py  (+30 more)
(+107 files in other folders)
