[project]
name = "evoclaw"
version = "1.26.0"
description = "Multi-LLM AI agent framework running in isolated Docker containers"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "python-telegram-bot>=21.0",
    "croniter>=3.0.0",
    "pyyaml>=6.0",
    # aiofiles removed — not imported anywhere in host/; re-add if host code uses aiofiles
    # aiohttp: floor raised to 3.10.11 (CVE-2024-52304 HTTP request smuggling fixed there)
    "aiohttp>=3.10.11",
    "psutil>=5.9.0",
    # Slack
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.27.0",
    # Discord
    "discord.py>=2.3.0",
    # Gmail
    "google-api-python-client>=2.120.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    # Phase 1: WebSocket IPC bridge + vector search
    "sqlite-vec>=0.1.0",
    "websockets>=12.0",
    # Phase 8C: inotify hybrid backend (Linux only, reduces IPC latency)
    "inotify-simple>=1.3.0; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
# Phase 4C: install with: pip install evoclaw[postgresql]
postgresql = [
    "psycopg2-binary>=2.9.0",  # optional, for PostgreSQL support (DATABASE_URL=postgresql://...)
]

[project.scripts]
evoclaw = "host.main:main"
evoclaw-setup = "setup.setup:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
